# terotel

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  run-docker.bat  run-docker.sh
jaeger-mock/: composer.json  index.php
jaeger-mock/src/: Kernel.php  Traces.php
proto/: model.proto  query.proto
proto/gogoproto/: gogo.proto
pushtest/: Dockerfile  composer.json  entrypoint.sh
pushtest/src/: TextLogger.php  index.php
src/: app.rs  cli.rs  jaeger.rs  main.rs  ui.rs
