[package]
name = "terotel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.90"
clap = { version = "4.5.20", features = ["derive"] }
crossterm = "0.28.1"
prost = "0.13.3"
prost-types = "0.13.3"
rand = "0.8.5"
ratatui = "0.28.1"
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
